docker-pv-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: docker-pv-pod
spec:
  containers:
  - name: app-container
    image: busybox
    command: ['sh', '-c', 'echo Hello, World! > /mnt/data/hello.txt && sleep 3600']
    volumeMounts:
    - name: storage
      mountPath: /mnt/data  # Path inside the container
  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: host-pvc
