service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-workflows-server
  namespace: argo
  labels:
    app: server
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argo-workflows-server
    app.kubernetes.io/part-of: argo-workflows
    app.kubernetes.io/version: v3.5.10
    helm.sh/chart: argo-workflows-0.42.0
spec:
  type: NodePort
  ports:
    - port: 2746
      targetPort: 2746
      nodePort: 30001
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-workflows
    app.kubernetes.io/name: argo-workflows-server
